TAG: qcreports_db-4-1-1-11
TAG: qcreports_db-4-1-1-10
DATE: 09/09/2008
STAFF: lec
CHANGES:
1) TR9251;GXD_ImagesUnused.py

TAG: qcreports_db-4-1-1-9
DATE: 09/05/2008
STAFF: lec
CHANGES:
1) TR9246;GXD_Triage.sql

TAG: qcreports_db-4-1-1-8
DATE: 08/21/2008
STAFF: lec
CHANGES:
1) TR9224;goStats.sh

TAG: qcreports_db-4-1-1-7
DATE: 08/20/2008
STAFF: sc
CHANGES:
1) TR9222 - qctr.html, added orthology loads

TAG: qcreports_db-4-1-1-6
DATE: 08/14/2008
STAFF: lec
CHANGES:
1) TR9187; ALL_NoMolMutation.py

TAG: qcreports_db-4-1-1-5
DATE: 08/12/2008
STAFF: lec
CHANGES:
1) TR9198; ALL_CellLineProvider.sql

TAG: qcreports_db-4-1-1-4
DATE: 08/06/2008
STAFF: lec
CHANGES:
1) TR9149; GXD_FullCodeable.py
2) TR9133; GXD_ImageCheck.sql
3) TR9155; MLD_NomenText.sql, MRK_Withdrawn.sql

TAG: qcreports_db-4-1-1-3
DATE: 07/23/2008
STAFF: lec
CHANGES:
1) TR9163; GXD_Images.py

TAG: qcreports_db-4-1-1-2
DATE: 07/09/2008
STAFF: lec
CHANGES:
TR 8945
1) MRK_AllNoGO.py
2) MRK_GOIEA.py
3) MRK_GOGold
4) MRK_GOAllele.py
5) MRK_NoGO.py
6) MRK_RatNOGO.sql
7) MRK_GOUnknown.sql
8) VOC_GODups.sql
9) GO_NotGene.sql
10) MRK_GORCA.py
11) GO_gp2protein_SWP_TR.py

TAG: qcreports_db-4-1-1-1
DATE: 07/09/2008
STAFF: dbm
CHANGES:
1) Merged TR9088 branch to trunk
2) Added links to qcr.html for EMAGE, GEO and GENSAT loads

TAG: qcreports_db-tr9088-BP
DATE: 07/07/2008
STAFF: dbm
CHANGES:
1) Branch point tag for TR9088 (GXD release)

TAG: qcreports_db-4-1-0-1
DATE: 06/16/2008
STAFF: dbm
CHANGES:
1) TR9063; Use new mount point for EILOGFILES setting

TAG: qcreports_db-4-0-2-9
DATE: 05/29/2008
STAFF: lec
CHANGES:
1) TR9042; GXD_ImageCheck.sql
2) TR9043; RECOMB_NotInCache.sql

TAG: qcreports_db-4-0-2-8
TAG: qcreports_db-4-0-2-7
TAG: qcreports_db-4-0-2-6
TAG: qcreports_db-4-0-2-5
DATE: 05/20/2008
STAFF: lec
CHANGES:
1) GXD_Status.py; removed some unnecessary image reports
2) TR8961; add this check to the GXD_ImageCheck.sql
3) fixes for 4.B (4.02)

TAG: qcreports_db-4-0-2-4
TAG: qcreports_db-4-0-2-3