@@ -8,9 +8,9 @@
 #       TR 3269 - Report 1
 #
 #	Report 2A
-#	Title = Genes Not RIKEN or 'expressed' or 'EST' with only GO Associations w/ IEA evidence
+#	Title = Genes with only GO Associations w/ IEA evidence
 #	Select markers of type 'gene' 
-#		where 'current' name does not contain 'RIKEN' or 'expressed' or 'EST'
+#		where 'current' name does not contain 'gene model'
 #               where the marker has 'GO' association w/ IEA only
 #               where the reference count exludes J:23000, J:57747, J:63103, J:57656, J:51368, 
 #               J:67225, J:67226, or any reference that has "Genbank Submission"  in 
@@ -25,17 +25,17 @@
 #    		human or rat ortholog?    'yes'
 #
 #    	Report 2B
-#	Title = Genes Not RIKEN or 'expressed' or 'EST' with only GO Associations w/ IEA evidence
+#	Title = Genes with only GO Associations w/ IEA evidence
 #    	Select markers of type 'gene'
-#    		where 'current' name does not contain 'RIKEN' or 'expressed' or 'EST'
+#    		where 'current' name does not contain 'gene model'
 #               where the marker has 'GO' association w/ IEA only
 #
 #    	Report in a tab delimited file with same columns as 1A
 #
 #	Report 2C
-#	Title = Genes Not RIKEN or 'expressed' or 'EST' with only GO Associations w/ IEA evidence
+#	Title = Genes with only GO Associations w/ IEA evidence
 #	Select markers of type 'gene' 
-#		where 'current' name does not contain 'RIKEN' or 'expressed' or 'EST'
+#		where 'current' name does not contain 'gene model'
 #               where the marker has 'GO' association w/ IEA only
 #               where the reference count includes J:23000, J:57747, J:63103, J:57656, J:51368, 
 #               J:67225, J:67226, or any reference that has "Genbank Submission"  in 
@@ -44,7 +44,7 @@
 #    	Report in a tab delimited file with same columns as 1A
 #
 #	Report 2D
-#	Title = Gene Not RIKEN or 'expressed' or 'EST' with only GO Assocations w/ IEA evidence
+#	Title = Gene with only GO Assocations w/ IEA evidence
 #               with references that are selected for GO but have not been used
 #
 #    	Report in a tab delimited/html file:
@@ -96,6 +96,9 @@
 #	- all private SQL reports require the header
 #
 # History:
+#
+# lec	09/17/2008
+#	- TR 9265; remove RIKEN, expressed, EST restrictions
 #
 # lec	07/08/2008
 #	- TR 8945
@@ -225,16 +228,13 @@ results = db.sql('select url from ACC_ActualDB where _LogicalDB_key = %d ' % (PU
 for r in results:
 	url = r['url']
 
-# select non-RIKEN, non-EST, non-ORF genes with GO Associations of evidence IEA only
+# select non-ORF genes with GO Associations of evidence IEA only
 
 db.sql('select m._Marker_key, m.symbol, m.name, mgiID = a.accID, a.numericPart ' + \
 	'into #markers ' + \
 	'from MRK_Marker m, ACC_Accession a ' + \
 	'where m._Marker_Type_key = 1 ' + \
 	'and m._Marker_Status_key in (1,3) ' + \
-	'and m.name not like "%RIKEN%" ' + \
-	'and m.name not like "%expressed%" ' + \
-	'and m.name not like "EST %" ' + \
 	'and m.name not like "gene model %" ' + \
 	'and m.symbol not like "[A-Z][0-9][0-9][0-9][0-9][0-9]" ' + \
 	'and m.symbol not like "[A-Z][A-Z][0-9][0-9][0-9][0-9][0-9][0-9]" ' + \
