@@ -187,14 +187,14 @@ be used at times to test reports for <I>future</I> public consumption.)
 <A NAME="go"><B>GO</B></A>
 <OL>
 <LI><A HREF="/data/reports/qcreports_db/output/MRK_RatNoGO.sql.rpt">Mouse Genes that have Rat/Human Homologs but no GO Annotations</A>
-<LI><A HREF="/data/reports/qcreports_db/output/MRK_NoGO_A.rpt">Genes (neither 'RIKEN' or 'expressed' or 'EST') with no GO Annotations and reference count excludes data loads and GenBank submissions</A>
-<LI><A HREF="/data/reports/qcreports_db/output/MRK_NoGO_B.rpt">Genes (neither 'RIKEN' or 'expressed' or 'EST') with no GO Annotations</A>
-<LI><A HREF="/data/reports/qcreports_db/output/MRK_NoGO_C.rpt">Genes (neither 'RIKEN' or 'expressed' or 'EST') with no GO Annotations and reference count includes only data loads and GenBank submissions</A>
-<LI><A HREF="/data/reports/qcreports_db/output/MRK_NoGO_D.html">Genes (neither 'RIKEN' or 'expressed' or 'EST') with no GO Annotations with references that are selected for GO but have not been used</A>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_NoGO_A.rpt">Genes with no GO Annotations and reference count excludes data loads and GenBank submissions</A>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_NoGO_B.rpt">Genes with no GO Annotations</A>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_NoGO_C.rpt">Genes with no GO Annotations and reference count includes only data loads and GenBank submissions</A>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_NoGO_D.html">Genes with no GO Annotations with references that are selected for GO but have not been used</A>
 <LI><A HREF="/data/reports/qcreports_db/output/MRK_AllNoGO.html">Genes with references that are selected for GO but have not been used</A>
-<LI><A HREF="/data/reports/qcreports_db/output/MRK_GOIEA_A.rpt">Genes (neither 'RIKEN' or 'expressed' or 'EST') with GO Annotations of evidence IEA only and reference count excludes data loads and GenBank submissions</A>
-<LI><A HREF="/data/reports/qcreports_db/output/MRK_GOIEA_C.rpt">Genes (neither 'RIKEN' or 'expressed' or 'EST') with GO Annotations of evidence IEA only and reference count includes only data loads and GenBank submissions</A>
-<LI><A HREF="/data/reports/qcreports_db/output/MRK_GOIEA_D.html">Genes (neither 'RIKEN' or 'expressed' or 'EST') with GO Annotations of evidence IEA only and with references that are selected for GO but have not been used</A>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_GOIEA_A.rpt">Genes with GO Annotations of evidence IEA only and reference count excludes data loads and GenBank submissions</A>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_GOIEA_C.rpt">Genes with GO Annotations of evidence IEA only and reference count includes only data loads and GenBank submissions</A>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_GOIEA_D.html">Genes with GO Annotations of evidence IEA only and with references that are selected for GO but have not been used</A>
 <LI><A HREF="/data/reports/qcreports_db/output/MRK_GOIEA_E.rpt">Genes with OMIM Annotations and either GO Annotations of evidence IEA only or no GO Annotations</A>
 <LI><A HREF="/data/reports/qcreports_db/output/MRK_GOIEA_F.rpt">Genes with Alleles and either GO Annotations of evidence IEA only or no GO Annotations</A>
 <LI><A HREF="/data/reports/qcreports_db/output/MRK_GOGold_A.rpt">All Genes with Annotations to IDA, IGI, IMP, IPI, TAS</A>
@@ -212,7 +212,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/GO_done.mgi">"Done" Genes with Literature</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GO_NotGene.sql.rpt">Non-Gene Markers with GO Annotations</A>
 <LI><A HREF="/data/reports/qcreports_db/output/VOC_GOObsolete.rpt">Markers with Annotations to Obsolete GO Terms</A>
-<LI><A HREF="/data/reports/qcreports_db/output/MRK_GORCA.html">Genes (neither 'RIKEN' or 'expressed' or 'EST') with GO Annotations of evidence RCA only and with references that are selected for GO but have not been used</A>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_GORCA.html">Genes with GO Annotations of evidence RCA only and with references that are selected for GO but have not been used</A>
 </OL>
 
 <A NAME="mtb"><B>MTB</B></A>
